--- a/netbox-media-pvc.yaml
+++ b/netbox-media-pvc.yaml
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  ##storageClassName: rook-cephfs #changeme
+  storageClassName: local-path #removing doesn't use default for some reason?
