--- a/netbox-deployment.yaml
+++ b/netbox-deployment.yaml
@@ -137,30 +137,30 @@ spec:
             - key: sso-saml2-metadata.xml
               path: sso-saml2-metadata.xml
       # Populate via secret
-      - name: auth-ldap-bind-password
-        secret:
-          secretName: netbox-secret
-          items:
-          - key: auth_ldap_bind_password
-            path: auth_ldap_bind_password
+      #- name: auth-ldap-bind-password
+      #  secret:
+      #    secretName: netbox-secret
+      #    items:
+      #    - key: auth_ldap_bind_password
+      #      path: auth_ldap_bind_password
       - name: db-password
         secret:
           secretName: netbox-postgresql
           items:
           - key: password
             path: db_password
-      - name: email-password
-        secret:
-          secretName: netbox-secret
-          items:
-          - key: email_password
-            path: email_password
-      - name: napalm-password
-        secret:
-          secretName: netbox-secret
-          items:
-          - key: napalm_password
-            path: napalm_password
+      #- name: email-password
+      #  secret:
+      #    secretName: netbox-secret
+      #    items:
+      #    - key: email_password
+      #      path: email_password
+      #- name: napalm-password
+      #  secret:
+      #    secretName: netbox-secret
+      #    items:
+      #    - key: napalm_password
+      #      path: napalm_password
       - name: redis-password
         secret:
           secretName: netbox-redis
