--- a/netbox-media-pvc.yaml
+++ b/netbox-media-pvc.yaml
@@ -11,4 +11,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: local-path #removing doesn't use default for some reason?
+###  storageClassName: local-path 
