--- a/netbox-configmap.yaml
+++ b/netbox-configmap.yaml
@@ -8,9 +8,9 @@ data:
   #changeme
   ALLOWED_HOSTS: '*'
   CHANGELOG_RETENTION: "90"
-  DB_HOST: netbox-postgresql
+  DB_HOST: cluster1-pgbouncer
   DB_NAME: netbox
-  DB_USER: netbox
+  DB_USER: pguser
   EMAIL_FROM: netbox@sentracam.com
   EMAIL_PORT: "25"
   EMAIL_SERVER: localhost
@@ -42,64 +42,5 @@ data:
 
   # LDAP configuration against Microsoft Acive Directory
   # For more information around LDAP, see https://netbox.readthedocs.io/en/stable/installation/4-ldap/
-  ldap_config.py: |
-    import ldap
-    from django_auth_ldap.config import LDAPSearch, NestedGroupOfNamesType
-
-    # Read secret from file
-    def read_secret(secret_name):
-        try:
-            f = open('/run/secrets/' + secret_name, 'r', encoding='utf-8')
-        except EnvironmentError:
-            return ''
-        else:
-            with f:
-                return f.readline().strip()
-
-    AUTH_LDAP_SERVER_URI = "<LDAP_server_URI>" #changeme
-    AUTH_LDAP_CONNECTION_OPTIONS = {
-      ldap.OPT_REFERRALS: 0
-    }
-    # Uncomment line below if using TLS
-    #AUTH_LDAP_START_TLS = True
-
-    # Service user credentials. This account will be making all the queries when users attempt to log in
-    AUTH_LDAP_BIND_DN = "<LDAP_bind_DN>" #changeme
-    AUTH_LDAP_BIND_PASSWORD = read_secret('auth_ldap_bind_password')
-    LDAP_IGNORE_CERT_ERRORS = True
-
-    # Where to look for users
-    AUTH_LDAP_USER_SEARCH = LDAPSearch("<LDAP_user_search>") #changeme
-
-    AUTH_LDAP_USER_DN_TEMPLATE = None
-
-    # Map user attributes to Django attributes
-    AUTH_LDAP_USER_ATTR_MAP = {
-        "first_name": "givenName",
-        "last_name": "sn",
-        "username": "uid",
-        "email": "mail"
-    }
-
-    AUTH_LDAP_GROUP_SEARCH = LDAPSearch("<LDAP_group_search>") #changeme
-
-    # Choose type applicable to your LDAP
-    #AUTH_LDAP_GROUP_TYPE = NestedGroupOfNamesType()
-    AUTH_LDAP_GROUP_TYPE = GroupOfNamesType()
-
-    # Groups defined in LDAP source and described here will be assigned the following permissions
-    AUTH_LDAP_USER_FLAGS_BY_GROUP = {
-      # Allowed to navigate regular NetBox interface. Specific available actions are determined by individual user and group permissions
-      "is_active": ["<LDAP_group>"], #changeme
-      # Allowed to navigate NetBox Administration menu. Specific available actions are determined by individual user and group permissions
-      "is_staff": ["<LDAP_group>"], #changeme
-      # Is given full admin permissions across this NetBox deployment, regardless of individual user or group permissions
-      "is_superuser": ["<LDAP_group>"], #changeme
-    }
-
-    # Groups defined in LDAP source and described here will be created within NetBox Authentication
-    AUTH_LDAP_MIRROR_GROUPS = {"<LDAP_groups_to_mirror>"} #changeme
-
-    AUTH_LDAP_FIND_GROUP_PERMS = True
-    #AUTH_LDAP_CACHE_GROUPS = False
-    AUTH_LDAP_GROUP_CACHE_TIMEOUT = 3600
+  #ldap_config.py: |
+  # ...removed...
