--- a/netbox-configmap.yaml
+++ b/netbox-configmap.yaml
@@ -10,7 +10,7 @@ data:
   CHANGELOG_RETENTION: "90"
   DB_HOST: cluster1-pgbouncer.postgres-operator.svc
   DB_NAME: netbox
-  DB_USER: pguser
+  DB_USER: cluster1
   EMAIL_FROM: netbox@sentracam.com
   EMAIL_PORT: "25"
   EMAIL_SERVER: localhost
