--- a/netbox-configmap.yaml
+++ b/netbox-configmap.yaml
@@ -8,9 +8,9 @@ data:
   #changeme
   ALLOWED_HOSTS: '*'
   CHANGELOG_RETENTION: "90"
-  DB_HOST: cluster1-pgbouncer.postgres-operator.svc
+  DB_HOST: netbox-pgbouncer.postgres-operator.svc
   DB_NAME: netbox
-  DB_USER: cluster1
+  DB_USER: netbox
   EMAIL_FROM: netbox@sentracam.com
   EMAIL_PORT: "25"
   EMAIL_SERVER: localhost
