--- a/redis-values.yaml
+++ b/redis-values.yaml
@@ -748,7 +748,7 @@ replica:
     ## If set to "-", storageClassName: "", which disables dynamic provisioning
     ## If undefined (the default) or set to null, no storageClassName spec is set, choosing the default provisioner
     ##
-    storageClass: "rook-ceph-block" #changeme
+    ### storageClass: "local-path" #commented, using default
     ## @param replica.persistence.accessModes Persistent Volume access modes
     ##
     accessModes:
