--- a/redis-cluster.yaml
+++ b/redis-cluster.yaml
@@ -2,7 +2,7 @@
 apiVersion: redis.redis.opstreelabs.in/v1beta2
 kind: RedisCluster
 metadata:
-  name: redis-cluster
+  name: netbox-redis-cluster
 spec:
   clusterSize: 3
   clusterVersion: v7
